--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
 
         <activity android:name=".ViewPagerActivity" />
 
-        <activity android:name=".WeekActivity" />
+        <activity android:name=".WeekViewActivity" />
     </application>
 
 </manifest>
